--- a/Desafios /D012/index.html
+++ b/Desafios /D012/index.html
@@ -77,7 +77,7 @@
 
     
 
-    <section class="imagem">
+    <section class="normal">
         <p>
             Agora, escrevo e envio<br>
             Chegando na mesma hora<br>
